# Puissance4

./: .gitignore  CMakeLists.txt  Makefile  grid.c  grid.h  main.c  readme.md  view.h  viewTerminal.c  viewTerminal.h
src/: error.c  error.h  grid.c  grid.h  main.c  player.c  player.h  playerAIBase.c  playerAIBase.h  playerAIEasy.c  playerAIEasy.h  playerAIHard.c  playerAIHard.h  playerAINormal.c  playerAINormal.h  playerHuman.c  playerHuman.h  view.c  view.h  viewSDL.c  viewSDL.h  viewTerminal.c  viewTerminal.h
test/: grid.c  grid.h  main.c  player.c  player.h  playerAIEasy.c  playerAIEasy.h  playerHuman.c  playerHuman.h  viewTerminal.c  viewTerminal.h
